# RPiCarDiag

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md  userstories.md
Userstories/: US-001_can_bus_sniffer.md  US-002_can_bus_interpreter.md  US-003_vehicle_ecu_config.md  US-004_customizable_dashboard.md  US-005_dtc_read.md  US-006_dtc_clear.md  US-007_variant_coding.md  US-008_simulation_mode.md  US-009_session_logging.md  US-010_connection_manager.md  US-011_settings_screen.md  US-012_dark_mode.md  US-013_export_report.md  US-014_auto_vehicle_detection.md  US-015_dpf_monitor.md
config/: app_config.yaml
config/schema/: app_config.schema.yaml  vehicle_config.schema.yaml
config/sim/: mercedes_w447_coding.yaml  sample_can_session.asc  sample_dtcs.yaml
config/vehicles/: generic_obd2.yaml  mercedes_vklasse_w447.yaml  mercedes_w447_v250.yaml  vw_golf7_5g.yaml  vw_golf_mk7.yaml
db/migrations/: 001_initial_schema.sql  002_dashboard_layouts.sql
docs/: architecture.md  development_setup.md  hardware_setup.md  mercedes_w447_dpf_reference.md  mercedes_w447_uds_reference.md  obd2_dtc_pid_reference.md  vehicle_config_guide.md
src/rpicardiag/: main.py
src/rpicardiag/core/: dtc_manager.py  vehicle_identifier.py
src/rpicardiag/ui/screens/: connection_screen.py
src/rpicardiag/ui/styles/: dark.qss  light.qss
tests/: conftest.py
