[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpicardiag"
version = "0.1.0"
description = "Raspberry Pi Car OBD Diagnostic Tool"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "python-can>=4.0",
    "python-obd>=0.7",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "udsoncan>=2.0",
    "can-isotp>=2.0",
]

[project.scripts]
rpicardiag = "rpicardiag.main:main"

[project.optional-dependencies]
export = ["reportlab>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
